cluster/apps/services/gitops/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-gitops
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`gitops.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: crowdsec-traefik-bouncer
        - name: rfc1918
      #   # - name: basicauth
      services:
        - name: weave-gitops
          namespace: services
          port: 9001
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
